[package]
name = "masuda"
version = "0.1.0"
authors = ["Tristan <tristan.struthers@mail.mcgill.ca>"]
edition = "2021"
license = "MIT"
description = "pokemon rng functionality written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.77", features = ["HtmlSelectElement", "HtmlInputElement"] }

[[bench]]
name = "masuda_benchmark"
harness = false
